@@ -1,3 +1,8 @@
+2006-01-19  Marcus Meissner  <marcus@jet.franken.de>
+
+	* libexif/exif-data.c: Let exif_data_load_data_entry() signal failure
+	  and discard entry in caller if it does.
+
 2006-01-16  Hubert Figuiere  <hub@figuiere.net>
 
 	* libexif/exif-mem.h, libexif/exif-loader.h: More documentation
